# TypeSafeBlockchain

./: .gitignore  README.md  TypeSafeBlcChn.cabal
app/: Main.hs
src/AWS/: DynamoDBHandler.hs  SQSHandler.hs
src/AWS/ec2/: ec2bare.pem
src/BlockChain/: BraidedBlockchain.hs  GenAddress.hs  Patricia.hs
src/Contracts/Escrow/ContractCode/: EscrowAPI.hs  EscrowContract.hs  FreeLib.hs  StorageLib.hs  TransferLib.hs
