name:                TypeSafeBlcChn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/TypeSafeBlcChn#readme
license:             BSD3
license-file:        LICENSE
author:              Ilyas Ridhuan
maintainer:          example@example.com
copyright:           2017 Ilyas Ridhuan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
                    ,  text
                    ,  conduit
                    ,  bytestring
                    ,  lens
                    ,  amazonka
                    ,  unordered-containers
                    ,  amazonka-dynamodb
                    ,  amazonka-sqs
                    ,  amazonka-core
  default-language:    Haskell2010

executable TypeSafeBlcChn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TypeSafeBlcChn
  default-language:    Haskell2010

test-suite TypeSafeBlcChn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TypeSafeBlcChn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TypeSafeBlcChn
